# mal

./: Cargo.toml  README.md
src/: main.rs  my_mal.rs
static/: main.css  sorttable.js  table.css
