[package]
name = "myanimelist"
version = "0.1.0"
authors = ["Cam Cope <github@camcope.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
#actix-web = "4.0.0-beta.6"
actix-web = { git = "https://github.com/actix/actix-web", rev = "6a29a50f25fd103c61e93d97dbee5745640bb911", default_features = false, features = ["cookies"] }
actix-session = "0.5.0-beta.1"
dotenv = "0.15"
futures = "*"
governor = "0.3"
nonzero_ext = "*"
oauth2 = { version = "4.0.0", features = ["pkce-plain"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
url = "*"

[patch.crates-io]
#"oauth2" = { path = "./oauth2-rs" }
"actix-session" = { path = "./vendor/actix-extras/actix-session" }
