[package]
name = "myanimelist"
version = "0.1.0"
authors = ["Cam Cope <github@camcope.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
actix-files = "0.6.0-beta.4"
actix-web = "4.0.0-beta.6"
actix-session = "0.5.0-beta.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "*"
mime = "*"
oauth2 = { version = "4.0.0", features = ["pkce-plain"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "*"
strum_macros = "*"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
url = "*"

[patch.crates-io]
actix-files = { path = "vendor/actix-web/actix-files" }
actix-http = { path = "vendor/actix-web/actix-http" }
actix-service = { git = "https://github.com/actix/actix-net" }
actix-session = { path = "./vendor/actix-extras/actix-session" }
#actix-web = { git = "https://github.com/actix/actix-web", rev = "6a29a50f25fd103c61e93d97dbee5745640bb911", default_features = false, features = ["cookies"] }
actix-web = { path = "vendor/actix-web", default_features = false, features = ["cookies"] }
indexmap = { git = "https://github.com/cuviper/indexmap.git", branch = "hashbrown-0.11" }
